# gd32f4_template

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  cmsis-dap.cfg
cmake/: toolchain_arm_gcc.cmake
src/app/: main.c
src/config/: CMakeLists.txt  gd32f4xx_libopt.h
src/port/: CMakeLists.txt  gd32f4xx.ld  startup_gd32f4xx.s  syscall.c
